--- a/FAQ_TRIBHUWAN/faq.html
+++ b/FAQ_TRIBHUWAN/faq.html
@@ -18,11 +18,8 @@
             <!-- all image -->
 
             <img class="box" src="./illustration-box-desktop.svg">
-            <!-- <img class="dektop" src="illustration-woman-online-desktop.svg"> -->
-
-
-
-            <!-- <img class="mobile" src="/illustration-woman-online-mobile.svg" alt="mobile"> -->
+            <!-- <img class="dektop" src="illustration-woman-online-desktop.svg">
+           <img class="mobile" src="illustration-woman-online-mobile.svg" alt="mobile"> -->
         </div>
         <div class="accordian_wrap">
             <!-- heading -->
