--- a/FAQ_TRIBHUWAN/faq.html
+++ b/FAQ_TRIBHUWAN/faq.html
@@ -46,7 +46,7 @@
                         <!-- <img src="images/icon-arrow-down.svg" alt="Down Arrow" class="arrow"> -->
                       </a>
                     </h2>
-                    <p class="answer collapse">You can invite up to 2 additional users on the Free plan. There is no limit on 
+                    <p class="answer">You can invite up to 2 additional users on the Free plan. There is no limit on 
                       team members for the Premium plan.</p>  
                   </li>
                   <li class="accordion_question_answer ">
